@@ -8,7 +8,8 @@
  - CID 60861-60864 : fix Coverity issue : dereference null return value
  - build against Android SDK 4.4W (API 20)
  - translated to Russian, thanks to Олег Нощенко
- - issue #161 : implement isValidFragment to fix Android bug fixed in Android API 19 (Kitkat)
+ - issue #161 : implement isValidFragment to fix Android bug fixed in Android
+ API 19 (Kitkat), thanks to Олег Нощенко for reporting
 
  v0.3 (released on 07Jul2014)
  - CID 60865 : fix Coverity issue : dereference null return value
